add support for python bindings #122
The commit adds support for Python bindings by updating the workflows file, modifying the build_wheel and docs sections, and making changes to other files such as .gitignore, CMakeLists.txt, antora.yml, and nav.adoc.

The build_wheel section now uses actions/checkout@v4 and includes additional steps for creating a virtual environment and compiling the wheel. The docs section also uses actions/checkout@v4 and includes steps for installing NPM and Python dependencies, building the Antora site, and deploying it using the JamesIves/github-pages-deploy-action.

In addition, the commit updates the .gitignore file to include *.whl and /**/*.egg-info, modifies the CMakeLists.txt file to change the project name and version, updates the antora.yml file to include dynamic-blocks@ attribute, and modifies the nav.adoc file to add an Examples section with a Thermal Fin sub-section.

Finally, the commit adds a new file, fin.adoc, under the examples directory, which provides a description and details about simulating heat transfer in a thermal fin.

Refactor workflows file, build_wheel and docs sections, modify various files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,8 +24,8 @@
 cmake_minimum_required(VERSION 3.21.0)
 
 project(
-  ${SKBUILD_PROJECT_NAME}
-  VERSION ${SKBUILD_PROJECT_VERSION} )
+  feelpp-project
+  VERSION 3.0.0 )
 
 set(EXTRA_VERSION "")
 set(PROJECT_SHORTNAME "fp")
