--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,11 @@
 name: CI
 
-on: 
+on:
   push:
-    branches: 
+    branches:
       - '**' # Push events on all branches
     paths-ignore:
       - '.github/workflows/init.yml'
-      - 'docs/**'
-      - 'package*.json'
-      - 'site.yml'
-      - 'generate-jupyter.sh'
-      - 'netlify*'
-      - '.github/workflows/docs.yml'
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10 including semver
 
@@ -19,21 +13,21 @@ jobs:
 
   build_wheel:
     runs-on: self-ubuntu-22.04
-    name: Build, Install, Package wheel
+    name: Build wheel
     if: "!contains(github.event.head_commit.message, 'wheel skip')"
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         lfs: true
-        recursive: true
-    - 
-      name: Create Virtual Environment 
+        submodules: 'recursive'
+    -
+      name: Create Virtual Environment
       run: |
         python3 -m venv .venv
         source .venv/bin/activate
         pip3 install -r requirements.txt
-    - 
+    -
       name: Compile
       run: |
         pip3 wheel --no-deps --wheel-dir dist .
@@ -44,43 +38,70 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         # Artifact name
-        name: dist-artifacts
+        name: wheel-artifacts
         # Directory containing files to upload
         path: dist/*.whl
-    - name: Release
-      if: startsWith(github.ref ,'refs/tags/v')
-      uses: softprops/action-gh-release@v1
+  docs:
+    runs-on: ubuntu-22.04
+    name: Build Antora Site
+    needs: build_wheel
+    if: "!contains(github.event.head_commit.message, 'docs skip')"
+    steps:
+    - uses: actions/checkout@v4
       with:
-        files: dist/*
-        draft: false
-        prerelease: ${{ contains(github.ref, 'alpha') || contains(github.ref, 'beta') || contains(github.ref, 'rc')}}
-        name: Release ${{ github.ref_name }}
-        generate_release_notes: true
-        tag_name: ${{ github.ref }}
-        token: ${{ secrets.GITHUB_TOKEN }}
+        lfs: true
+        submodules: 'recursive'
+    - name: Install credentials
+      run: echo https://$GITHUB_OAUTH:@github.com > $HOME/.git-credentials
+      env:
+        GITHUB_OAUTH: ${{ secrets.CR_PAT_WORKFLOW }}
+    - name: Install NPM dependencies
+      run: npm install
+    - name: Download
+      uses: actions/download-artifact@v3
+      with:
+        # Artifact name
+        name: wheel-artifacts
+        path: dist/
+    - name: Install Python dependencies
+      run: |
+          python -m venv --system-site-packages .venv
+          source .venv/bin/activate
+          pip install -r requirements.txt
+          pip install dist/*.whl
+    - name: Build Antora Site
+      run: |
+          source .venv/bin/activate
+          npm run antora
+    - name: Deploy
+      if: ${{ github.ref_name == 'master' }}
+      uses: JamesIves/github-pages-deploy-action@v4
+      with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: public # The folder the action should deploy.
   build_code:
     runs-on: self-ubuntu-22.04
     name: Build, Install, Package code
     if: "!contains(github.event.head_commit.message, 'code skip')"
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         lfs: true
-        recursive: true
-    - 
-      name: Build 
+        submodules: 'recursive'
+    -
+      name: Build
       run: |
         cmake --preset default
         cmake --build --preset default
-    - 
-      name: Check 
+    -
+      name: Check
       run: |
         ctest --preset default
       env:
-        OMPI_ALLOW_RUN_AS_ROOT: 1 
+        OMPI_ALLOW_RUN_AS_ROOT: 1
         OMPI_ALLOW_RUN_AS_ROOT_CONFIRM: 1
-    - 
+    -
       name: Package
       run: |
         cmake --build --preset default -t package
@@ -91,28 +112,17 @@ jobs:
         name: feelpp-project-artifacts
         # Directory containing files to upload
         path: build/default/assets/feelpp-project-*
-    - name: Release
-      if: startsWith(github.ref ,'refs/tags/v')
-      uses: softprops/action-gh-release@v1
-      with:
-        files: build/default/assets/feelpp-project-*
-        draft: false
-        prerelease: ${{ contains(github.ref, 'alpha') || contains(github.ref, 'beta') || contains(github.ref, 'rc')}}
-        name: Release ${{ github.ref_name }}
-        generate_release_notes: true
-        tag_name: ${{ github.ref }}
-        token: ${{ secrets.GITHUB_TOKEN }}
   deliver:
     runs-on: self-ubuntu-22.04
     needs: build_code
     name: Build docker, tag and push
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         lfs: true
         submodules: 'recursive'
-    - name: Download 
+    - name: Download
       uses: actions/download-artifact@v3
       with:
         # Artifact name
@@ -136,20 +146,53 @@ jobs:
     -
       name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    - 
+    -
       name: Login to GitHub Container Registry
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
         username: ${{ github.repository_owner }}
         password: ${{ secrets.CR_PAT }}
-    - 
+    -
       name: Build container image
       uses: docker/build-push-action@v5
-      with: 
+      with:
         context: artifacts
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         file: ./Dockerfile
-        
+  release:
+    runs-on: self-ubuntu-22.04
+    name: Release
+    needs: [build_wheel, build_code]
+    if: startsWith(github.ref ,'refs/tags/v')
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          lfs: true
+          submodules: 'recursive'      
+      - name: Download Deb Packages
+        uses: actions/download-artifact@v3
+        with:
+          # Artifact name
+          name: feelpp-project-artifacts
+          path: artifacts/
+      - name: Download Wheel Packages
+        uses: actions/download-artifact@v3
+        with:
+          # Artifact name
+          name: wheel-artifacts
+          path: dist/
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            artifacts/*.deb
+            dist/*.whl
+          draft: false
+          prerelease: ${{ contains(github.ref, 'alpha') || contains(github.ref, 'beta') || contains(github.ref, 'rc')}}
+          name: Release ${{ github.ref_name }}
+          generate_release_notes: true
+          tag_name: ${{ github.ref }}
+          token: ${{ secrets.GITHUB_TOKEN }}
