--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,7 +21,7 @@
 # Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #
 #
-#feelpp_add_application(laplacian SRCS laplacian.cpp TESTS INSTALL )
+feelpp_add_application(laplacian SRCS laplacian.cpp TESTS INSTALL )
 feelpp_add_testcase(cases PREFIX fp CATEGORY feelpp)
 
 python_add_library(_laplacian MODULE _laplacian.cpp WITH_SOABI)
@@ -30,9 +30,7 @@ target_compile_definitions(_laplacian PRIVATE VERSION_INFO=${PROJECT_VERSION})
 
 install(TARGETS _laplacian DESTINATION ${PROJECT_NAME})
 
-#feelpp_add_pymodule(laplacian SRCS _laplacian.cpp DESTINATION feelpp_project)
-
-# if ( FEELPP_TOOLBOXES_FOUND )
-#     feelpp_add_application(toolbox SRCS toolbox.cpp LINK_LIBRARIES Feelpp::feelpp_toolbox_electric_lib TESTS)
-#     feelpp_add_testcase(cases)
-# endif()
+if ( FEELPP_TOOLBOXES_FOUND )
+    feelpp_add_application(toolbox SRCS toolbox.cpp LINK_LIBRARIES Feelpp::feelpp_toolbox_electric_lib TESTS)
+    feelpp_add_testcase(cases)
+endif()
