--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         # Directory containing files to upload
         path: dist/*.whl
   docs:
-    runs-on: ubuntu-22.04
+    runs-on: self-ubuntu-22.04
     name: Build Antora Site
     needs: build_wheel
     if: "!contains(github.event.head_commit.message, 'docs skip')"
