display .venv installation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,8 +67,9 @@ jobs:
       run: |
           python -m venv --system-site-packages .venv
           source .venv/bin/activate
-          pip install -r requirements.txt
-          pip install dist/*.whl
+          pip3 install -r requirements.txt
+          pip3 install dist/*.whl
+          tree .venv
     - name: Build Antora Site
       run: |
           source .venv/bin/activate
