--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@antora/cli": "^3.1",
     "@antora/collector-extension": "^1.0.0-alpha.3",
+    "@antora/site-generator": "^3.1",
     "@antora/site-generator-default": "^3.1",
     "@asciidoctor/core": "^2.2.6",
     "asciidoctor": "^2.2.6",
