fix rename script #125
fix rename script #125

This commit fixes the rename script, updating the naming of the Feel++ template project. The project template in the README.adoc and README.md files has been renamed from "{feelpp} Project Template" to "{feelpp} Template Project". The pyproject.toml file has also been updated with the correct description.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "scikit_build_core.build"
 [project]
 name = "feelpp-project"
 version = "3.0.0"
-description="Feelpp Template Project"
+description="Feel++ Template Project"
 readme = "README.md"
 authors = [
   { name = "Christophe Prud'homme", email = "christophe.prudhomme@cemosis.fr" },
