--- a/package.json
+++ b/package.json
@@ -29,17 +29,19 @@
   "dependencies": {
     "@antora/cli": "^3.1",
     "@antora/collector-extension": "^1.0.0-alpha.3",
-    "@antora/site-generator-default": "^3.1",
+    "@antora/site-generator": "^3.1",
+    "@antora/site-generator-default": "^2.3.4",
     "@asciidoctor/core": "^2.2.6",
+    "@feelpp/asciidoctor-extensions": "1.0.0-rc.8",
     "asciidoctor": "^2.2.6",
     "asciidoctor-jupyter": "^0.6.0",
     "asciidoctor-kroki": "^0.17.0",
     "handlebars": "^4.7.8",
     "handlebars-utils": "^1.0.6",
-    "@feelpp/asciidoctor-extensions": "1.0.0-rc.8"
+    "package": "^1.0.1"
   },
   "devDependencies": {
-    "broken-link-checker": "^0.7.8",
+    "broken-link-checker": "^0.6.7",
     "http-server": "^14.1.1",
     "write-good": "^1.0.8"
   },
