up laplacian class
#128

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,15 +29,15 @@ if(FEELPP_TOOLBOXES_FOUND)
     feelpp_add_testcase(cases)
 endif()
 
-if ( SKBUILD_PROJECT_NAME )
-    python_add_library(_laplacian MODULE _laplacian.cpp WITH_SOABI)
-    target_link_libraries(_laplacian PRIVATE pybind11::headers Feelpp::feelpp)
-    target_compile_definitions(_laplacian PRIVATE VERSION_INFO=${PROJECT_VERSION})
-
-    install(TARGETS _laplacian DESTINATION feelpp_project)
-else()
-    feelpp_add_pymodule(laplacian SRCS _laplacian.cpp DESTINATION ${PROJECT_NAME})
-    file(GLOB PYFILES "${CMAKE_CURRENT_SOURCE_DIR}/feelpp_project/*.py")
-    install(FILES ${PYFILES} DESTINATION ${FEELPP_PYTHON_MODULE_PATH}/${PROJECT_NAME})
-endif()
-
+foreach(binding laplacian)
+    if ( SKBUILD_PROJECT_NAME )
+            python_add_library(_${binding} MODULE _${binding}.cpp WITH_SOABI)
+            target_link_libraries(_${binding} PRIVATE pybind11::headers Feelpp::feelpp)
+            target_compile_definitions(_${binding} PRIVATE VERSION_INFO=${PROJECT_VERSION})
+            install(TARGETS _${binding} DESTINATION feelpp_project)
+    else()
+        feelpp_add_pymodule(${binding} SRCS _${binding}.cpp DESTINATION ${PROJECT_NAME})
+        file(GLOB PYFILES "${CMAKE_CURRENT_SOURCE_DIR}/feelpp_project/*.py")
+        install(FILES ${PYFILES} DESTINATION ${FEELPP_PYTHON_MODULE_PATH}/${PROJECT_NAME})
+    endif()
+endforeach()
