--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+platformdirs<3,>=2
 pipx
 build
 scikit-build >= 0.8.1
@@ -6,7 +7,7 @@ pyproject-metadata
 ipykernel
 numpy
 scipy
-pandas
+pandas < 2.2
 tabulate 
 plotly
 
