use option -I to install requirements
#132

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         python3 -m venv .venv
         source .venv/bin/activate
-        pip3 install -r requirements.txt
+        pip3 install -I -r requirements.txt
     -
       name: Compile
       run: |
@@ -67,7 +67,7 @@ jobs:
       run: |
           python -m venv --system-site-packages .venv
           source .venv/bin/activate
-          pip3 install -r requirements.txt
+          pip3 install -I -r requirements.txt
           pip3 install dist/*.whl
           tree .venv
     - name: Build Antora Site
