--- a/site.yml
+++ b/site.yml
@@ -7,6 +7,8 @@ content:
   - url: .
     branches: HEAD
     start_path: docs
+    tags:
+    - 'v3.2*' # v3.2.0, v3.2.1, v3.2.2, etc.
 ui:
   supplemental_files: ./docs/antora/supplemental-ui
   bundle:
