--- a/site.yml
+++ b/site.yml
@@ -8,7 +8,7 @@ content:
     branches: HEAD
     start_path: docs
     tags:
-    - 'v3.2*' # v3.2.0, v3.2.1, v3.2.2, etc.
+    - 'v3.2.4' # v3.2.0, v3.2.1, v3.2.2, etc.
 ui:
   supplemental_files: ./docs/antora/supplemental-ui
   bundle:
