Update package dependencies
- Added "@feelpp/asciidoctor-extensions" version "1.0.0-rc.11" to dependencies.
- Updated "broken-link-checker" from version "^0.6.7" to "^0.7.8" in devDependencies.
- Removed duplicate entry for "@feelpp/asciidoctor-extensions" in dependencies.

#143

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           uv venv --system-site-packages
           source .venv/bin/activate
           uv pip install .[dev,test]    
-          npm install
+          npm install --verbose
           npx downdoc README.adoc
 
       - name: Build wheel
@@ -95,7 +95,7 @@ jobs:
       - name: Build Antora site
         run: |
           source .venv/bin/activate
-          npm install
+          npm install --verbose
           npm run antora || true
           npm run antora
         env:
@@ -141,7 +141,7 @@ jobs:
           source .venv/bin/activate
           uv pip install .[test]
           uv pip install dist/*.whl
-          npm install
+          npm install --verbose
           npx downdoc README.adoc
 
       - name: Build C++ code
