--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
     "@antora/site-generator": "^3.1",
     "@antora/site-generator-default": "^3.1",
     "@asciidoctor/core": "^2.2.6",
+    "@feelpp/asciidoctor-extensions": "1.0.0-rc.11",
     "asciidoctor": "^2.2.6",
     "asciidoctor-jupyter": "^0.7.0",
     "asciidoctor-kroki": "^0.18.1",
     "handlebars": "^4.7.8",
     "handlebars-utils": "^1.0.6",
-    "package": "^1.0.1",
-    "@feelpp/asciidoctor-extensions": "1.0.0-rc.11"
+    "package": "^1.0.1"
   },
   "devDependencies": {
-    "broken-link-checker": "^0.6.7",
+    "broken-link-checker": "^0.7.8",
     "http-server": "^14.1.1",
     "write-good": "^1.0.8"
   },
