Refactor project structure and update import paths
- Updated the wheel package path in pyproject.toml to reflect the new directory structure.
- Changed the welcome message and import statements in the laplacian.ipynb notebook to use the correct module path.
- Modified CMakeLists.txt to install targets in the updated directory structure for the Feel++ project.

#143

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ dev = [
 
 [tool.scikit-build]
 wheel.expand-macos-universal-tags = true
-wheel.packages = ["src/feelpp/project"]
+wheel.packages = ["src/python/feelpp/"]
 build.verbose = true
 logging.level = "INFO"
 sdist.cmake = true
