--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -33,9 +33,9 @@ foreach(binding laplacian)
             python_add_library(_${binding} MODULE _${binding}.cpp WITH_SOABI)
             target_link_libraries(_${binding} PRIVATE pybind11::headers Feelpp::feelpp)
             target_compile_definitions(_${binding} PRIVATE VERSION_INFO=${PROJECT_VERSION})
-            install(TARGETS _${binding} DESTINATION feelpp_project)
+            install(TARGETS _${binding} DESTINATION feelpp/project)
     else()
-        feelpp_add_pymodule(${binding} SRCS _${binding}.cpp DESTINATION ${PROJECT_NAME})
+        feelpp_add_pymodule(${binding} SRCS _${binding}.cpp DESTINATION feelpp/project)
     endif()
 endforeach()
 
