--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ cmake_minimum_required(VERSION 3.21.0)
 
 project( feelpp-project  VERSION 4.0.0 )
 
-set(EXTRA_VERSION "-rc.7")
+set(EXTRA_VERSION "")
 set(PROJECT_SHORTNAME "fp")
 
 include(GNUInstallDirs)
